# llm_instaler

./: .flake8  .gitignore  1  =0.41.0  CHANGELOG.md  CLAUDE.md  DETECTION_ALGORITHM.md  GEMINI.md  HANDLER_DEVELOPMENT_GUIDE.md  LICENSE  README.md  check_model_info.py  check_torch_version.py  config.yaml.example  direct_torch_upgrade.py  fix_installed_janus.sh  fix_janus_loader.py  fix_janus_model.py  fix_model_size.py  fix_torch_vulnerability.py  gemma3_quantization_notes.md  gemma3_recommendations.md  gemma3_vision_notes.md  huggingface_model_types.md  install_torch_cu124.py  list_sd_turbo_files.py  llm-installer  package.json  patch_janus_loader.py  pyproject.toml  pytest.ini  requirements.txt  setup.sh  test_deepseek_r1_fix.py  test_gemma3.py  test_handler_import.py  test_hf_api.py  test_lora.py  test_qwen_load.py  test_qwen_start.sh  (+4 more)
.claude/: settings.local.json
EXAMLE_LEARN/data/: fufel1.json  fufel2_expanded.json  fufel4.json  fufel4_expanded.json
EXAMLE_LEARN/generators/: finetuning.py
core/: __init__.py  checker.py  cli.py  config.py  constants.py  context_managers.py  dataset_manager.py  dependencies.py  dependency_installer.py  exceptions.py  installer.py  lora_utils.py  quantization_config.py  secure_subprocess.py  training_config.py  utils.py
detectors/: architecture_detector.py  base.py  config_detector.py  diffusers_detector.py  registry.py  trocr_detector.py
docs/: HANDLER_DEVELOPMENT_GUIDE.md  HANDLER_SYSTEM.md  LLM_INSTALLER_REFERENCE.md  QUANTIZATION_SUPPORT.md  TECHNICAL_REQUIREMENTS.md  handler-training-development.md  installer-manual.md  quantization-system.md  training-guide.md
example_data/: fufel1_expanded.json  fufel2.json  fufel3.json
handlers/: __init__.py  audio.py  base.py  deepseek.py  diffusion.py  embedding.py  gemma3.py  gemma3n.py  janus.py  llama4.py  multimodal.py  qwen3.py  qwen_vl.py  registry.py  sd3_large_handler.py  specialized.py  transformer.py  trocr.py  vision.py
llm_installer/: __init__.py  checker.py  hardware.py  installer.py  main.py  model_detector.py  model_detector_v2.py  model_profile.py  utils.py
llm_installer/detectors/: __init__.py  base.py  diffusion_detector.py  gguf_detector.py  moe_detector.py  multi_modality_detector.py  multimodal_detector.py  sentence_transformer_detector.py  transformer_detector.py
llm_installer/detectors_v2/: __init__.py  audio_detector.py  bagel_detector.py  base.py  controlnet_detector.py  converter.py  cosmos_detector.py  diffusers_detector.py  diffusers_utils.py  flux_detector.py  gguf_detector.py  sentence_transformers_detector.py  timm_detector.py  transformers_detector.py
llm_installer/handlers/: __init__.py  base.py  general.py  janus.py  nematron.py
scripts/: check_lora.py  convert_twitter_to_qa.py  model_loader.py  model_loader_v2.py  serve_android.html  serve_api.py  serve_apple.html  serve_modern.html  serve_scifi.html  serve_terminal.html  serve_ui.html  start.sh  train.sh  train_lora.py
tests/: __init__.py  test_config.py  test_utils.py
